fix: fix style blog page on mobile and tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
+@layer utilities {
+	/* Chrome, Safari and Opera */
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+
+	.no-scrollbar {
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+	}
+}
 html {
 	--image-gradient: linear-gradient(
 		to bottom left,
